--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@
               <h2>Jeremy Robson</h2>
             </div>
           </div>
-          <nav class="header__card__timeline-div" role="tablist" aria-label="Timeframe selection">
-  <a class="link" href="#" role="tab" aria-selected="false">Daily</a>
-  <a class="link" href="#" role="tab" aria-selected="true" data-default>Weekly</a>
-  <a class="link" href="#" role="tab" aria-selected="false">Monthly</a>
-</nav>
-
+          <div class="header__card__timeline-div" role="tablist" aria-label="Timeframe selection">
+            <a class="link" href="#" role="tab" aria-selected="false">Daily</a>
+            <a class="link" href="#" role="tab" aria-selected="true" data-default>Weekly</a>
+            <a class="link" href="#" role="tab" aria-selected="false">Monthly</a>
+          </div>
         </div>
       </header>
 
